--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ section h2, section p { text-align: center; }
 #body-field.edit-mode #add-item { display: none; }
 #body-field.edit-mode #save-item { display: block; }
 
+#maybe-compare h2 { font-size: 1.2em; text-align: center; }
 #maybe-compare #compare-items li.item { font-size: 1.5em; }
 #maybe-compare #compare-items li.item .ui-btn-text { white-space: normal; }
 #maybe-compare #compare-items li.item > .ui-btn-inner { padding-right: 50px; } 
